--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,7 @@ mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.1
 platformdirs==3.2.0
-psycopg==3.1.8
-psycopg-binary==3.1.8
+psycopg2-binary==2.9.6
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-docx==0.8.11
